--- a/index.html
+++ b/index.html
@@ -26,22 +26,39 @@
               </a>
             </li>
             <li>
-              <a href="#about">
+              <a href="#gallery">
                 <b><big>GALLERY</big></b>
               </a>
             </li>
             <li>
-              <a href="#contact">
-                <b><big>CONTACT</big></b>
+              <a href="#contactus">
+                <b><big>CONTACT US</big></b>
               </a>
             </li>
           </ul>
           <div class="madsos">
-            <a href=""><img src="images/twitter.png" /></a>
+            <a href="" target="_blank">
+              <img src="images/twitter.png" alt="twitter" />
+            </a>
+            <a href="" target="_blank">
+              <img src="images/facebook.png" alt="facebook" />
+            </a>
+            <a href="" target="_blank">
+              <img src="images/instagram.png" alt="instagram" />
+            </a>
+            <a href="" target="_blank">
+              <img src="images/youtube.png" alt="youtube" />
+            </a>
           </div>
         </div>
       </nav>
       <h1 class="text-title text-center mt-5">WELCOME</h1>
+    </div>
+    <div class="container" id="gallery">
+      <h1 class="text-title text-center mt-5">Gallery</h1>
+      <div class="flex">
+        <img src="" alt="" />
+      </div>
     </div>
   </body>
 </html>
