--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Home | Personal Info</title>
   </head>
   <body>
+    
     <div class="container" style="background-image: url('images/car1.png')">
       <nav>
         <div class="container-nav">
@@ -21,8 +22,8 @@
               </a>
             </li>
             <li>
-              <a href="#about">
-                <b><big>ABOUT</big></b>
+              <a href="#aboutus">
+                <b><big>ABOUT US</big></b>
               </a>
             </li>
             <li>
@@ -52,13 +53,85 @@
           </div>
         </div>
       </nav>
-      <h1 class="text-title text-center mt-5">WELCOME</h1>
+      <h1 class="text-title text-center mt-10">WELCOME</h1>
     </div>
-    <div class="container" id="gallery">
-      <h1 class="text-title text-center mt-5">Gallery</h1>
-      <div class="flex">
-        <img src="" alt="" />
+    <div class="container flex flex-col items-center" id="gallery">
+      <h1 class="text-title text-center mt-5">GALLERY</h1>
+      <div class="flex  mt-2 w-90 items-center gap-3" >
+        <div class="card-bg-images w-400"  style="background-image: url('images/car4.png');">
+        </div>
+        <div class="card-bg-images w-250"  style="background-image: url('images/car3.png');">
+        </div>
+        <div class="card-bg-images w-250"  style="background-image: url('images/car6.png');">
+        </div>
+        <div class="card-bg-images w-400"  style="background-image: url('images/car5.png');">
+        </div>
       </div>
     </div>
+    <div class="container flex flex-col items-center" id="aboutus">
+      <h1 class="text-title text-center mt-5">ABOUT US</h1>
+      <div class="flex justify-center mt-5 w-90 items-center gap-10" >
+        <div style="width: 42%; height: 100%;">
+          <h2>What is Lorem Ipsum?</h2>
+          <p style="margin-top: 25px; color: rgb(168, 168, 168); font-size: 18px;">
+            Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
+            Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
+            when an unknown printer took a galley of type and scrambled it to make a type 
+            specimen book. It has survived not only five centuries, but also the leap into 
+            electronic typesetting, remaining essentially unchanged.
+          </p>
+        </div>     
+        <img src="images/car2.png" alt="car 2" style="width: 42%; " >
+      </div>
+    </div>
+    <div class="container flex flex-col items-center justify-center  w-90"  id="contactus">
+      <h1 class="text-title text-center mt-5">CONTACT US</h1>
+      <div class="flex justify-center mt-2 items-center gap-10 w-100 " >
+        <div class="card flex justify-center items-center"> 
+          <div class="card-body flex justify-center"  style="width: 90%;">
+            <form  style="width: 100%;" class="flex justify-center items-center gap-30">
+              <div class="h-100 flex flex-col justify-center gap-30"  style="width: 300px;">
+                <div class="group-input">
+                  <label for="username">Username</label>
+                  <input type="text" id="username" class="form-control" placeholder="username..." />
+                </div>
+                <div class="group-input mt-2" >
+                  <label for="email">Email</label>
+                  <input type="email" id="email" class="form-control" placeholder="Email..." />
+                </div>
+                <div class="mt-2">
+                  <button class="btn btn-primary">submit</button>
+                </div>
+              </div>
+            <textarea name="" id="" width="100rem" style="width:25rem; height: 15rem;">   
+            </textarea>
+            </div> 
+            </form> 
+          </div>
+        </div>
+    </div>
+    </div>
+    <footer class="text-center flex flex-col gap-20">
+      <h4>BMW</h4>
+      <p>jeflyjonathan1@gmail.com</p>
+      <p>0821-8261-6803</p>
+      <p style="width: 30%;" class="m-auto">Auto 60 name Street City area/District City/
+        Town/Village County Postal code Country</p>
+      <div class="madsos m-auto">
+          <a href="" target="_blank">
+            <img src="images/twitter.png" alt="twitter" />
+          </a>
+          <a href="" target="_blank">
+            <img src="images/facebook.png" alt="facebook" />
+          </a>
+          <a href="" target="_blank">
+            <img src="images/instagram.png" alt="instagram" />
+          </a>
+          <a href="" target="_blank">
+            <img src="images/youtube.png" alt="youtube" />
+          </a>
+        </div>
+        <p class="mb-5">© 2023 Jefli Jonathan</p>
+    </footer>
   </body>
 </html>
