compressed images 3mb to 0,576 mb

--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
   </head>
   <body>
     
-    <div class="container" style="background-image: url('images/car1.png')">
+    <div class="container" style="background-image: url('images/car1.webp')">
       <nav>
         <div class="container-nav">
           <a href="index.html">
-            <img src="images/bmw.png" alt="bmw" width="50" height="50" />
+            <img src="images/bmw.webp" alt="bmw" width="50" height="50" />
           </a>
           <ul class="text-white ms-auto">
             <li>
@@ -39,16 +39,16 @@
           </ul>
           <div class="madsos">
             <a href="" target="_blank">
-              <img src="images/twitter.png" alt="twitter" />
+              <img src="images/twitter.webp" alt="twitter" />
             </a>
             <a href="" target="_blank">
-              <img src="images/facebook.png" alt="facebook" />
+              <img src="images/facebook.webp" alt="facebook" />
             </a>
             <a href="" target="_blank">
-              <img src="images/instagram.png" alt="instagram" />
+              <img src="images/instagram.webp" alt="instagram" />
             </a>
             <a href="" target="_blank">
-              <img src="images/youtube.png" alt="youtube" />
+              <img src="images/youtube.webp" alt="youtube" />
             </a>
           </div>
         </div>
@@ -58,13 +58,13 @@
     <div class="container flex flex-col items-center" id="gallery">
       <h1 class="text-title text-center mt-5">GALLERY</h1>
       <div class="flex  mt-2 w-90 items-center gap-3" >
-        <div class="card-bg-images w-400"  style="background-image: url('images/car4.png');">
+        <div class="card-bg-images w-400"  style="background-image: url('images/car4.webp');">
         </div>
-        <div class="card-bg-images w-250"  style="background-image: url('images/car3.png');">
+        <div class="card-bg-images w-250"  style="background-image: url('images/car3.webp');">
         </div>
-        <div class="card-bg-images w-250"  style="background-image: url('images/car6.png');">
+        <div class="card-bg-images w-250"  style="background-image: url('images/car6.webp');">
         </div>
-        <div class="card-bg-images w-400"  style="background-image: url('images/car5.png');">
+        <div class="card-bg-images w-400"  style="background-image: url('images/car5.webp');">
         </div>
       </div>
     </div>
@@ -81,7 +81,7 @@
             electronic typesetting, remaining essentially unchanged.
           </p>
         </div>     
-        <img src="images/car2.png" alt="car 2" style="width: 42%; " >
+        <img src="images/car2.webp" alt="car 2" style="width: 42%; " >
       </div>
     </div>
     <div class="container flex flex-col items-center justify-center  w-90"  id="contactus">
@@ -119,16 +119,16 @@
         Town/Village County Postal code Country</p>
       <div class="madsos m-auto">
           <a href="" target="_blank">
-            <img src="images/twitter.png" alt="twitter" />
+            <img src="images/twitter.webp" alt="twitter" />
           </a>
           <a href="" target="_blank">
-            <img src="images/facebook.png" alt="facebook" />
+            <img src="images/facebook.webp" alt="facebook" />
           </a>
           <a href="" target="_blank">
-            <img src="images/instagram.png" alt="instagram" />
+            <img src="images/instagram.webp" alt="instagram" />
           </a>
           <a href="" target="_blank">
-            <img src="images/youtube.png" alt="youtube" />
+            <img src="images/youtube.webp" alt="youtube" />
           </a>
         </div>
         <p class="mb-5">© 2023 Jefli Jonathan</p>
